# run-watcher

./: .env.example  .gitignore  CLAUDE.md  DISCOVERY.md  HOMEBREW_TAP.md  NEXT_STEPS.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml
Formula/: run-watcher.rb
run_watcher/: __init__.py  app.py  commands.py  config.py  github_client.py  poller.py  widgets.py
